# CMake

cmake_learn/build_type/: CMakeLists.txt  main.cpp
cmake_learn/compile_flags/: CMakeLists.txt
cmake_learn/compile_with_clang/: CMakeLists.txt  pre_test.sh  run_test.sh
cmake_learn/hello_cmake/: CMakeLists.txt
cmake_learn/hello_headers/: CMakeLists.txt
cmake_learn/hello_headers/src/: hello.cpp  main.cpp
cmake_learn/including_third_party/: CMakeLists.txt  main.cpp
cmake_learn/shared_library/: CMakeLists.txt
cmake_learn/shared_library/src/: hello.cpp  main.cpp
cmake_learn/static_library/: CMakeLists.txt
cmake_learn/static_library/src/: hello.cpp  main.cpp
hello_cmake/: main.cpp
